# hestix-core-api

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  ENVIRONMENT.md  README.md  SECURITY.md
.github/workflows/: docker-build.yml
.sqlx/: query-0025cd5a25e4ecc5c5089146c9848828aa0285aeed906ad2b81e6d58a2e578c5.json  query-01ef38df6e9ca7b95e89f57ff1e9d7e29b0d0e6c4e7866fb3d8d9de6a8e0d6a8.json  query-0ce6643d4ea0102cb7ad33eb0fc19d9dd4ef9a5873e9f87d31c12d0df49f1f94.json  query-0d368a1611f2f36670d1a5cabacef704506537b6f7af6b0be8f512be47076ff7.json  query-19f12af3db956b02c9f52fec409c29821b4c04ee97539b599d0a1e50baba47e0.json  query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-2aec7db1df72654b17be4c1086e5f5a373f85ee287f637a0af149fd063c7b42c.json  query-3c4fb214380b4a0a378f895741b10dec5b81c2e1a032b7bfd75234887a4963e3.json  query-7a6a78372633521ab815835e7504a073d98ce9073976b8f641ec598cc66d71a4.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-9ce47588bd86239f0a3b942d6d7db34b915b2307a942876a9231b45d40dbe9c3.json  query-9d71d47d4a1a522b50d3812554640ee716dce9d1396885e1dd345d2cddfa655b.json  query-aad9516eab3788aeebf24b2874d967744a1f28926f50d3316580394c83cbb1fd.json  query-b137adecc16de4bcde25a6d83d4029ea4ad307d19132961bd5946a0999d81384.json  query-b84cdf783a40746070a0a60e9c7cf93cdb23444a4d07fa47b7318ebaecee6e0a.json  query-d46bf0080f7bbb0ec47072c5e5d0cfbbbe90f07281ae2802224071a64ab4c8cc.json  query-d8668b983c8262820ffd9c7d8ec941f7a63c897957010f5b4e94a74240cd119e.json
devops/: login-client.pat
devops/init/: 01-init.sql
migrations/: 20250708061307_create_users_table.sql
src/: .env  app.rs  app_state.rs  bootstrap.rs  config.rs  main.rs
src/application/: auth_service.rs  mod.rs  user_service.rs
src/cache/: resolver.rs  user_resolver.rs
src/domain/entities/: mod.rs  user.rs
src/domain/repositories/: mod.rs
src/domain/services/: mod.rs
src/dto/: mod.rs
src/dto/auth/: auth_callback_request.rs  mod.rs  register_user_request.rs  token_response.rs
src/dto/keycloak/: keycloak_user.rs  keycloak_user_create.rs  mod.rs
src/dto/user/: user_response.rs
src/handlers/: auth_handler.rs  mod.rs  user_handler.rs
src/http/: client.rs  errors.rs  mod.rs
src/http/cookies/: cookie_helper.rs
src/http/handlers/: auth_handler.rs  user_handler.rs
src/http/routes/: auth_routes.rs  mod.rs  user_routes.rs
src/infrastructure/: mod.rs
src/infrastructure/config/: config.rs
src/infrastructure/oidc/: discovery.rs  jwk.rs  mod.rs  provider.rs
src/infrastructure/persistence/: mod.rs  user_repository.rs
src/infrastructure/web/: mod.rs
src/macros/: role.rs
src/middleware/: cookies.rs  mod.rs
src/middleware/security/: extractor.rs  mod.rs  security.rs  security_layer.rs
src/model/: mod.rs  role.rs
src/model/dto/: user_dto.rs
src/models/: mod.rs  role.rs  user.rs
src/oidc/: claims.rs  discovery.rs  error.rs  jwk.rs  mod.rs  provider.rs
src/providers/: mod.rs
src/providers/zitadel/: admin.rs  mod.rs  provider.rs  role_mapper.rs
src/repositories/: user_repository.rs
src/routes/: auth_routes.rs  mod.rs  user_routes.rs
src/security/: mod.rs
src/security/keycloak/: claims.rs  client.rs  config.rs  current_user.rs  error.rs  extractor.rs  mod.rs  utils.rs  validator.rs
src/services/: auth_service.rs  keycloak_service.rs  mod.rs  user_service.rs
src/setup/: keycloak.rs  mod.rs  services.rs
src/shared/: mod.rs  user_resolver.rs
src/tasks/: user_sync.rs
src/user/: cache.rs  mod.rs  resolver.rs  user_repository.rs  user_service.rs
src/util/: mod.rs
(+46 files in other folders)
