[package]
name = "hestix-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.8.4"

# Async runtime
tokio = { version = "1.46.1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUIDs, useful for tokens or IDs
uuid = { version = "1.17.0", features = ["v4", "serde", "fast-rng"] }

# Logging / debugging
tracing = "0.1"
tracing-subscriber = "0.3"

# dotenv support for env files
dotenvy = "0.15"

# DB sync
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "macros", "uuid", "time"] }

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
thiserror = "2.0.12"

# Cargo mirror
[source.crates-io]
replace-with = "cloudflare"

[source.cloudflare]
registry = "https://index.crates.io"