[package]
name = "hestix-core-api"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# Web framework
axum = "0.8.4"
axum-extra = { version = "0.10", features = ["typed-header"] }

# Async runtime
tokio = { version = "1.46.1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUIDs, useful for tokens or IDs
uuid = { version = "1.17.0", features = ["v4", "serde", "fast-rng"] }

# Logging / debugging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# dotenv support for env files
dotenvy = "0.15"

# DB sync
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "macros", "uuid", "time"] }
time = { version = "0.3", features = ["serde"] }

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
thiserror = "2.0.12"


# Jsonwebtoken
jsonwebtoken = { version = "9" }
once_cell = "1"
headers = "0.4.1"
async-trait = "0.1.88"

# Caching
moka = { version = "0.12.10", features = ["future"] }
futures = "0.3.31"
anyhow = "1.0.98"
tower-http = { version = "0.6.6", features = ["trace"] }

# Cargo mirror
[source.crates-io]
replace-with = "cloudflare"

[source.cloudflare]
registry = "https://index.crates.io"